citra_android: Start material 3 migration (#6335)

--- a/src/android/app/src/main/res/layout/card_game.xml
+++ b/src/android/app/src/main/res/layout/card_game.xml
@@ -36,15 +36,13 @@
             android:layout_marginStart="8dp"
             android:baselineAligned="false"
             android:ellipsize="end"
-            android:gravity="center_vertical"
             android:lines="1"
             android:maxLines="1"
             android:textAlignment="viewStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/image_game_screen"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="The Legend of Zelda\nOcarina of Time 3D"
-            android:textColor="@color/header_text" />
+            tools:text="The Legend of Zelda\nOcarina of Time 3D" />
 
         <TextView
             android:id="@+id/text_company"
@@ -58,8 +56,7 @@
             app:layout_constraintStart_toStartOf="@+id/text_game_title"
             app:layout_constraintTop_toBottomOf="@+id/text_game_title"
             app:layout_constraintVertical_bias="0.842"
-            tools:text="Nintendo"
-            android:textColor="@color/header_subtext" />
+            tools:text="Nintendo" />
 
         <TextView
             android:id="@+id/text_filename"
@@ -73,10 +70,8 @@
             app:layout_constraintStart_toStartOf="@+id/text_game_title"
             app:layout_constraintTop_toBottomOf="@+id/text_game_title"
             app:layout_constraintVertical_bias="0.0"
-            tools:text="Pilotwings_Resort.cxi"
-            android:textColor="@color/header_subtext" />
+            tools:text="Pilotwings_Resort.cxi" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
-
