--- a/src/android/app/src/main/res/layout/list_item_setting.xml
+++ b/src/android/app/src/main/res/layout/list_item_setting.xml
@@ -21,7 +21,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/spacing_large"
         android:layout_marginEnd="@dimen/spacing_large"
-        android:textColor="@color/header_text"
         android:textSize="16sp"
         tools:text="Setting Name" />
 
@@ -37,7 +36,6 @@
         android:layout_marginTop="@dimen/spacing_small"
         android:layout_marginEnd="@dimen/spacing_large"
         android:visibility="visible"
-        tools:text="@string/app_disclaimer"
-        android:textColor="@color/header_subtext" />
+        tools:text="@string/app_disclaimer" />
 
 </RelativeLayout>
