--- a/src/android/app/src/main/res/layout/list_item_settings_header.xml
+++ b/src/android/app/src/main/res/layout/list_item_settings_header.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="@dimen/spacing_large"
         android:layout_marginBottom="@dimen/spacing_small"
         android:layout_marginTop="@dimen/spacing_small"
-        android:textColor="?android:colorAccent"
+        android:textColor="?attr/colorPrimary"
         android:textStyle="bold"
         tools:text="CPU Settings" />
 
