citra_qt: Add enhancement options to per-game (#6308)
Co-authored-by: Tobias <thm.frey@gmail.com>

--- a/src/citra_qt/configuration/configure_enhancements.ui
+++ b/src/citra_qt/configuration/configure_enhancements.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>634</height>
+    <height>657</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -27,74 +27,88 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_6">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Internal Resolution</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="resolution_factor_combobox">
-          <item>
+       <widget class="QWidget" name="widget_resolution" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="resolution_label">
            <property name="text">
-            <string>Auto (Window Size)</string>
+            <string>Internal Resolution</string>
            </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Native (400x240)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>2x Native (800x480)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>3x Native (1200x720)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>4x Native (1600x960)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>5x Native (2000x1200)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>6x Native (2400x1440)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>7x Native (2800x1680)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>8x Native (3200x1920)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>9x Native (3600x2160)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>10x Native (4000x2400)</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-       </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="resolution_factor_combobox">
+           <item>
+            <property name="text">
+             <string>Auto (Window Size)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Native (400x240)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>2x Native (800x480)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>3x Native (1200x720)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>4x Native (1600x960)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>5x Native (2000x1200)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>6x Native (2400x1440)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>7x Native (2800x1680)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>8x Native (3200x1920)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>9x Native (3600x2160)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>10x Native (4000x2400)</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="toggle_linear_filter">
@@ -104,38 +118,66 @@
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_11">
-        <item>
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Post-Processing Shader</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="shader_combobox"/>
-        </item>
-       </layout>
+       <widget class="QWidget" name="widget_shader" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout_11">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="shader_label">
+           <property name="text">
+            <string>Post-Processing Shader</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="shader_combobox"/>
+         </item>
+        </layout>
+       </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <item>
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Texture Filter</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="texture_filter_combobox"/>
-        </item>
-       </layout>
+       <widget class="QWidget" name="widget_texture_filter" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="texture_filter_label">
+           <property name="text">
+            <string>Texture Filter</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="texture_filter_combobox"/>
+         </item>
+        </layout>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox">
+    <widget class="QGroupBox" name="stereo_group">
      <property name="title">
       <string>Stereoscopy</string>
      </property>
@@ -236,109 +278,151 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="layoutBox">
+    <widget class="QGroupBox" name="layout_group">
      <property name="title">
       <string>Layout</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
-        <item>
-         <widget class="QLabel" name="label1">
-          <property name="text">
-           <string>Screen Layout:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="layout_combobox">
-          <item>
+       <widget class="QWidget" name="widget_layout" native="true">
+        <layout class="QHBoxLayout" name="screen_layout_group">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="layout_label">
            <property name="text">
-            <string>Default</string>
+            <string>Screen Layout:</string>
            </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Single Screen</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Large Screen</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Side by Side</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Separate Windows</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-       </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="layout_combobox">
+           <item>
+            <property name="text">
+             <string>Default</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Single Screen</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Large Screen</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Side by Side</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Separate Windows</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="swap_screen">
+       <widget class="QCheckBox" name="toggle_swap_screen">
         <property name="text">
          <string>Swap Screens</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="upright_screen">
+       <widget class="QCheckBox" name="toggle_upright_screen">
         <property name="text">
          <string>Rotate Screens Upright</string>
         </property>
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_7">
-        <item>
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string>Large Screen Proportion:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QDoubleSpinBox" name="large_screen_proportion">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>16</number>
-          </property>
-          <property name="value">
-           <number>4</number>
-          </property>
-         </widget>
-        </item>
+       <widget class="QWidget" name="" native="true">
+        <layout class="QHBoxLayout" name="proportion_layout">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>Large Screen Proportion:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QDoubleSpinBox" name="large_screen_proportion">
+           <property name="minimum">
+            <double>1.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>16.000000000000000</double>
+           </property>
+           <property name="value">
+            <double>4.000000000000000</double>
+           </property>
+          </widget>
+         </item>
         </layout>
+       </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
-        <item>
-         <widget class="QLabel" name="bg_label">
-          <property name="text">
-           <string>Background Color:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="bg_button">
-          <property name="maximumSize">
-           <size>
-            <width>40</width>
-            <height>16777215</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QWidget" name="bg_color_group" native="true">
+        <layout class="QHBoxLayout" name="bg_color_group_2">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="bg_label">
+           <property name="text">
+            <string>Background Color:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="bg_button">
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -406,8 +490,8 @@
   <tabstop>factor_3d</tabstop>
   <tabstop>mono_rendering_eye</tabstop>
   <tabstop>layout_combobox</tabstop>
-  <tabstop>swap_screen</tabstop>
-  <tabstop>upright_screen</tabstop>
+  <tabstop>toggle_swap_screen</tabstop>
+  <tabstop>toggle_upright_screen</tabstop>
   <tabstop>large_screen_proportion</tabstop>
   <tabstop>bg_button</tabstop>
   <tabstop>toggle_custom_textures</tabstop>
