citra_android: Storage Access Framework implementation (#6313)

--- a/src/android/app/src/main/res/menu/menu_game_grid.xml
+++ b/src/android/app/src/main/res/menu/menu_game_grid.xml
@@ -14,6 +14,11 @@
         app:showAsAction="ifRoom">
         <menu>
             <item
+                android:id="@+id/button_select_root"
+                android:icon="@drawable/ic_folder"
+                android:title="@string/select_citra_user_folder"
+                app:showAsAction="ifRoom" />
+            <item
                 android:id="@+id/button_add_directory"
                 android:icon="@drawable/ic_folder"
                 android:title="@string/select_game_folder"
