--- a/src/android/app/src/main/res/layout/list_item_cheat.xml
+++ b/src/android/app/src/main/res/layout/list_item_cheat.xml
@@ -24,11 +24,12 @@
 
     <CheckBox
         android:id="@+id/checkbox"
-        android:layout_width="48dp"
-        android:layout_height="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:focusable="true"
         android:gravity="center"
         android:nextFocusLeft="@id/root"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/text_name"
