--- a/src/android/app/src/main/res/layout/activity_cheats.xml
+++ b/src/android/app/src/main/res/layout/activity_cheats.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,14 +18,12 @@
             android:id="@+id/appbar_cheats"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:elevation="0dp"
-            app:liftOnScroll="false">
+            android:fitsSystemWindows="true">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar_cheats"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/colorSurface" />
+                android:layout_height="?attr/actionBarSize" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -40,18 +39,20 @@
         app:layout_constraintTop_toBottomOf="@id/coordinator_cheats">
 
         <androidx.fragment.app.FragmentContainerView
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/cheat_list"
-            android:name="org.citra.citra_emu.features.cheats.ui.CheatListFragment" />
+            android:id="@+id/cheat_list_container"
+            android:name="org.citra.citra_emu.features.cheats.ui.CheatListFragment"
+            tools:layout="@layout/fragment_cheat_list" />
 
         <androidx.fragment.app.FragmentContainerView
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/cheat_details"
-            android:name="org.citra.citra_emu.features.cheats.ui.CheatDetailsFragment" />
+            android:id="@+id/cheat_details_container"
+            android:name="org.citra.citra_emu.features.cheats.ui.CheatDetailsFragment"
+            tools:layout="@layout/fragment_cheat_details" />
 
     </androidx.slidingpanelayout.widget.SlidingPaneLayout>
 
