--- a/src/android/app/src/main/res/layout/fragment_cheat_list.xml
+++ b/src/android/app/src/main/res/layout/fragment_cheat_list.xml
@@ -9,6 +9,7 @@
         android:id="@+id/cheat_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +22,7 @@
         android:src="@drawable/ic_add"
         android:contentDescription="@string/cheats_add"
         android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
