--- a/src/android/app/src/main/res/values/dimens.xml
+++ b/src/android/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="spacing_small">4dp</dimen>
     <dimen name="spacing_medlarge">12dp</dimen>
     <dimen name="spacing_large">16dp</dimen>
+    <dimen name="spacing_fab_list">80dp</dimen>
 
     <dimen name="dialog_margin">20dp</dimen>
 </resources>
