--- a/src/android/app/src/main/res/values/themes.xml
+++ b/src/android/app/src/main/res/values/themes.xml
@@ -38,7 +38,8 @@
         <item name="colorPrimaryInverse">@color/citra_inversePrimary</item>
 
         <item name="homeAsUpIndicator">@drawable/ic_back</item>
-        <item name="android:statusBarColor">@color/citra_surface</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:textColorLink">@color/citra_primary</item>
         <item name="materialAlertDialogTheme">@style/CitraMaterialDialog</item>
         <item name="popupMenuStyle">@style/CitraShapedPopup</item>
