--- a/src/citra_qt/configuration/configure_graphics.ui
+++ b/src/citra_qt/configuration/configure_graphics.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>430</height>
+    <height>443</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -21,26 +21,64 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QGroupBox" name="apiBox">
+     <property name="title">
+      <string>API Settings</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QWidget" name="graphics_api_group" native="true">
+        <layout class="QHBoxLayout" name="graphics_api_group_2">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="graphics_api_label">
+           <property name="text">
+            <string>Graphics API</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="graphics_api_combo">
+           <item>
+            <property name="text">
+             <string>Software</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>OpenGL</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="rendererBox">
      <property name="title">
       <string>Renderer</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_6">
       <item>
-       <widget class="QCheckBox" name="toggle_hw_renderer">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Use OpenGL to accelerate rendering.&lt;/p&gt;&lt;p&gt;Disable to debug graphics-related problem.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="text">
-         <string>Enable Hardware Renderer</string>
-        </property>
-       </widget>
-      </item>
-      <item>
        <widget class="QWidget" name="hw_renderer_group" native="true">
         <layout class="QVBoxLayout" name="verticalLayout_5">
          <property name="leftMargin">
-          <number>16</number>
+          <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
@@ -157,8 +195,6 @@
   </layout>
  </widget>
  <tabstops>
-  <tabstop>toggle_hw_renderer</tabstop>
-  <tabstop>toggle_hw_shader</tabstop>
   <tabstop>toggle_separable_shader</tabstop>
   <tabstop>toggle_accurate_mul</tabstop>
   <tabstop>toggle_shader_jit</tabstop>
