Rework system title handling with up-to-date title list and region detection support. (#6356)

--- a/src/citra_qt/configuration/configure_system.ui
+++ b/src/citra_qt/configuration/configure_system.ui
@@ -371,20 +371,59 @@
         <item row="15" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout_nus_download">
           <item>
-           <widget class="QComboBox" name="combo_download_mode">
-            <item>
-             <property name="text">
-              <string>All</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Recommended</string>
-             </property>
-            </item>
+           <widget class="QComboBox" name="combo_download_set">
             <item>
              <property name="text">
               <string>Minimal</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Old 3DS</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>New 3DS</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="combo_download_region">
+            <item>
+             <property name="text">
+              <string>JPN</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>USA</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>EUR</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>AUS</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>CHN</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>KOR</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>TWN</string>
              </property>
             </item>
            </widget>
