--- a/src/citra_qt/configuration/configure_system.ui
+++ b/src/citra_qt/configuration/configure_system.ui
@@ -369,82 +369,84 @@
          </widget>
         </item>
         <item row="15" column="1">
-         <layout class="QHBoxLayout" name="horizontalLayout_nus_download">
-          <item>
-           <widget class="QComboBox" name="combo_download_set">
-            <item>
-             <property name="text">
-              <string>Minimal</string>
+         <widget class="QWidget" name="body_nus_download">
+          <layout class="QHBoxLayout" name="horizontalLayout_nus_download">
+           <item>
+            <widget class="QComboBox" name="combo_download_set">
+             <item>
+              <property name="text">
+               <string>Minimal</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Old 3DS</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>New 3DS</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="combo_download_region">
+             <item>
+              <property name="text">
+               <string>JPN</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>USA</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>EUR</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>AUS</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>CHN</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>KOR</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>TWN</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="button_start_download">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
              </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Old 3DS</string>
+             <property name="layoutDirection">
+              <enum>Qt::RightToLeft</enum>
              </property>
-            </item>
-            <item>
              <property name="text">
-              <string>New 3DS</string>
+              <string>Download</string>
              </property>
-            </item>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="combo_download_region">
-            <item>
-             <property name="text">
-              <string>JPN</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>USA</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>EUR</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>AUS</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>CHN</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>KOR</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>TWN</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="button_start_download">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="layoutDirection">
-             <enum>Qt::RightToLeft</enum>
-            </property>
-            <property name="text">
-             <string>Download</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
+            </widget>
+           </item>
+          </layout>
+         </widget>
         </item>
        </layout>
       </widget>
